4819 Migrate CDK modules to AWS SDK v2